2008-02-23 Jerome Rapinat <romjerome@yahoo.fr>
        * configure.in : allow Slovenian support

2008-02-22  Raphael Ackermann <raphael.ackermann@gmail.com>
	* ViewManager.py
	* gen/db/iterator.py
	* gen/db/base.py
	* gen/db/dbconst.py
	* gen/db/cursor.py
	* gen/db/__init__.py
	* gen/db/exceptions.py
	* gen/db/dbdir.py
	* gen/lib/srcbase.py
	* gen/callback: deleted unused directory
	* plugins/ReorderIds.py:
	pylint and pep8 doc fixes
	
2008-02-23  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/date_test.py: removed file; moved tests to:
	* src/gen/lib/test/date_test.py (suite3): new tests
	moved tests from src/date_test.py into unit-test framework

2008-02-22 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditFamily.py: Add fallback dates for birth and death
	Bug #1785

2008-02-22 Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/RelationView.py:
	* src/Editors/_EditFamily.py:
	* src/Editors/_EditChildRef.py
	Fix crash on doubleclicking buttons. Bug #1802

2008-02-22  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py: translate "Gramplet"
	* src/plugins/Makefile.am : add AgeOnDate.py QR
	* po/POTFILES.in: add AgeOnDate.py QR

2008-02-22  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/FilterEditor/_EditRule.py
	* src/Filters/Rules/_HasAttributeBase.py
	* src/Filters/Rules/Family/_MatchesFilter.py
	* src/Filters/Rules/Event/_MatchesFilter.py
	* src/Filters/Rules/Event/_MatchesSourceFilter.py
	* src/Filters/Rules/Event/_HasType.py
	* src/Filters/Rules/Event/_MatchesPersonFilter.py
	* src/Filters/Rules/_HasTextMatchingRegexpOf.py
	* src/Filters/Rules/_HasReferenceCountBase.py
	* src/Filters/Rules/_HasNoteSubstrBase.py
	* src/Filters/Rules/__init__.py
	* src/Filters/Rules/_HasGrampsId.py
	* src/Filters/Rules/_RegExpIdBase.py
	* src/Filters/Rules/_IsPrivate.py
	* src/Filters/Rules/_Rule.py
	* src/Filters/Rules/_HasMarkerBase.py
	* src/Filters/Rules/_HasEventBase.py
	* src/Filters/Rules/Note/_MatchesFilter.py