@@ -1,3 +1,7 @@
+2008-02-23  Douglas S. Blank <dblank@cs.brynmawr.edu>
+	* src/gen/lib/date.py (Date.get_stop_date): 
+	added new method Date.to_calendar; dates return None if error
+
 2008-02-23 Jerome Rapinat <romjerome@yahoo.fr>
         * configure.in : allow Slovenian support
 
